--- a/style.css
+++ b/style.css
@@ -4,49 +4,41 @@ body{
     height: 100vh;
 
 }
-.contanier{
-/*position: fixed;*/
-left: 450px;
-background-color: rgba(0,255,255,0.5);
-height: 375px;
-width: 350px;
-margin: auto;
-margin-top: 100px;
-border: 10px solid gray;
-border-radius: 10%;
-
-}
-.row{
+.outer{
 
 display: flex;
-justify-content: space-between;
-align-items: center;
-background-color: #edeef0;
-border-radius: 30px;
-padding-left: 20px;
-margin-bottom: 20px;
+justify-content: center;
 
-}
-input[type="text"]{
-
-border: none;
-outline: none;
-background: transparent;
 
 }
 h1{
-
   text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  color: whitesmoke;
+}
+.contanier{
+
+  background-color: #1b2b3f;
+  width: 350px;
+  height: 400px;
+  border-radius: 10%;
+  border: 10px solid gray;
+  
+}
+.inpu1{
+  margin-left: 18px ;
+  outline: none;
+  padding: 7px;
+  background: transparent;
+  color: white;
 
 }
-input[type="button"]{
-    
-    outline: none;
-    border: none;
-    border-radius: 25%;
-    background-color: cyan;
-    padding: 12px;
-    
-    
-
+.btn{
+  padding: 7px;
+}
+.btn:hover{
+  background-color: cyan ;
+  padding: 7px;
+  outline: none;
+  border: none;
 }
